force-app/main/default/objects/Client_Cars__c/Client_Cars__c.object-meta.xml
<CustomObject>
    <label>Client Car(s)</label>
    <nameField>
        <displayFormat>CC-{0000}</displayFormat>
        <label>Client Cars Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Cars</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>