force-app/main/default/objects/Client_Cars__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>Car</label>
    <referenceTo>Car__c</referenceTo>
    <relationshipLabel>Client Cars</relationshipLabel>
    <relationshipName>Client_Cars</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>