force-app/main/default/objects/Client_Cars__c/fields/Car_Type__c.field-meta.xml
<CustomField>
    <fullName>Car_Type__c</fullName>
    <label>Car Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passenger</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Bus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>