force-app/main/default/objects/Client_Cars__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Cars</relationshipLabel>
    <relationshipName>Client_Cars</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>