force-app/main/default/objects/Client_Cars__c/fields/Gearbox__c.field-meta.xml
<CustomField>
    <fullName>Gearbox__c</fullName>
    <label>Gearbox</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Mechanic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>